// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompliantSystems expect to render with unsupported hosts 1`] = `
<DocumentFragment>
  <div
    class="pf-l-grid report-table-chart-container"
  >
    <div
      class="pf-l-grid__item pf-m-12-col"
    >
      <div
        class="pf-c-chart"
        style="pointer-events: none; position: relative; width: 100%; height: 100%;"
      >
        <svg
          height="230"
          role="img"
          style="pointer-events: all; width: 100%; height: 100%;"
          viewBox="0 0 230 230"
          width="230"
        >
          <g>
            <path
              d="M1.130044229770525,-94.99327870980537A95,95,0,0,1,83.58721329114323,-45.14618227736349L77.38854766660421,-41.892871589970134A88,88,0,0,0,1.1300442297705258,-87.99274401925855Z"
              role="presentation"
              shape-rendering="auto"
              style="fill: #D2D2D2; padding: 8px; stroke: var(--pf-chart-pie--data--stroke--Color, transparent); stroke-width: 1;"
              transform="translate(115, 115)"
            />
            <path
              d="M84.63752876916065,-43.14497333235359A95,95,0,0,1,88.41953933315978,-34.741690576479016L81.8739256900158,-32.25926676330031A88,88,0,0,0,78.43886314462165,-39.89166264496023Z"
              role="presentation"
              shape-rendering="auto"
              style="fill: #D2D2D2; padding: 8px; stroke: var(--pf-chart-pie--data--stroke--Color, transparent); stroke-width: 1;"
              transform="translate(115, 115)"
            />
            <path
              d="M89.22097774606146,-32.62847115690228A95,95,0,1,1,-1.1300442297705369,-94.99327870980537L-1.1300442297705169,-87.99274401925855A88,88,0,1,0,82.67536410291748,-30.146047343723573Z"
              role="presentation"
              shape-rendering="auto"
              style="fill: #D2D2D2; padding: 8px; stroke: var(--pf-chart-pie--data--stroke--Color, transparent); stroke-width: 1;"
              transform="translate(115, 115)"
            />
            <path
              d="M-1.745121688784978e-14,-95L-1.6165337748745062e-14,-88Z"
              role="presentation"
              shape-rendering="auto"
              style="fill: #D2D2D2; padding: 8px; stroke: var(--pf-chart-pie--data--stroke--Color, transparent); stroke-width: 1;"
              transform="translate(115, 115)"
            />
          </g>
          <text
            direction="inherit"
            dx="0"
            x="115"
            y="113.675"
          >
            <tspan
              dx="0"
              dy="0"
              style="fill: var(--pf-chart-donut--label--title--Fill, #151515); font-size: 24px; text-anchor: middle; font-family: var(--pf-chart-global--FontFamily, \\"RedHatText\\", \\"Overpass\\", overpass, helvetica, arial, sans-serif); letter-spacing: var(--pf-chart-global--letter-spacing, normal); stroke: transparent;"
              text-anchor="middle"
              x="115"
            >
              0%
            </tspan>
            <tspan
              dx="0"
              dy="13.5"
              style="fill: var(--pf-chart-donut--label--subtitle--Fill, #b8bbbe); font-size: 14px; text-anchor: middle; font-family: var(--pf-chart-global--FontFamily, \\"RedHatText\\", \\"Overpass\\", overpass, helvetica, arial, sans-serif); letter-spacing: var(--pf-chart-global--letter-spacing, normal); stroke: transparent;"
              text-anchor="middle"
              x="115"
            >
              Compliant
            </tspan>
          </text>
        </svg>
        <div
          style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
        >
          <svg
            height="230"
            style="overflow: visible; width: 100%; height: 100%;"
            viewBox="0 0 230 230"
            width="230"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CompliantSystems expect to render without error 1`] = `
<DocumentFragment>
  <div
    class="pf-l-grid report-table-chart-container"
  >
    <div
      class="pf-l-grid__item pf-m-12-col"
    >
      <div
        class="pf-c-chart"
        style="pointer-events: none; position: relative; width: 100%; height: 100%;"
      >
        <svg
          height="230"
          role="img"
          style="pointer-events: all; width: 100%; height: 100%;"
          viewBox="0 0 230 230"
          width="230"
        >
          <g>
            <path
              d="M1.130044229770525,-94.99327870980537A95,95,0,1,1,-56.74987327881188,-76.1869534949311L-52.63506222954659,-70.52340196056737A88,88,0,1,0,1.1300442297705258,-87.99274401925855Z"
              role="presentation"
              shape-rendering="auto"
              style="fill: #D2D2D2; padding: 8px; stroke: var(--pf-chart-pie--data--stroke--Color, transparent); stroke-width: 1;"
              transform="translate(115, 115)"
            />
            <path
              d="M-54.92142330625248,-77.51540016032574A95,95,0,0,1,-1.1300442297705369,-94.99327870980537L-1.1300442297705169,-87.99274401925855A88,88,0,0,0,-50.80661225698723,-71.85184862596199Z"
              role="presentation"
              shape-rendering="auto"
              style="fill: #D2D2D2; padding: 8px; stroke: var(--pf-chart-pie--data--stroke--Color, transparent); stroke-width: 1;"
              transform="translate(115, 115)"
            />
            <path
              d="M-1.745121688784978e-14,-95L-1.6165337748745062e-14,-88Z"
              role="presentation"
              shape-rendering="auto"
              style="fill: #D2D2D2; padding: 8px; stroke: var(--pf-chart-pie--data--stroke--Color, transparent); stroke-width: 1;"
              transform="translate(115, 115)"
            />
            <path
              d="M-1.745121688784978e-14,-95L-1.6165337748745062e-14,-88Z"
              role="presentation"
              shape-rendering="auto"
              style="fill: #D2D2D2; padding: 8px; stroke: var(--pf-chart-pie--data--stroke--Color, transparent); stroke-width: 1;"
              transform="translate(115, 115)"
            />
          </g>
          <text
            direction="inherit"
            dx="0"
            x="115"
            y="113.675"
          >
            <tspan
              dx="0"
              dy="0"
              style="fill: var(--pf-chart-donut--label--title--Fill, #151515); font-size: 24px; text-anchor: middle; font-family: var(--pf-chart-global--FontFamily, \\"RedHatText\\", \\"Overpass\\", overpass, helvetica, arial, sans-serif); letter-spacing: var(--pf-chart-global--letter-spacing, normal); stroke: transparent;"
              text-anchor="middle"
              x="115"
            >
              0%
            </tspan>
            <tspan
              dx="0"
              dy="13.5"
              style="fill: var(--pf-chart-donut--label--subtitle--Fill, #b8bbbe); font-size: 14px; text-anchor: middle; font-family: var(--pf-chart-global--FontFamily, \\"RedHatText\\", \\"Overpass\\", overpass, helvetica, arial, sans-serif); letter-spacing: var(--pf-chart-global--letter-spacing, normal); stroke: transparent;"
              text-anchor="middle"
              x="115"
            >
              Compliant
            </tspan>
          </text>
        </svg>
        <div
          style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
        >
          <svg
            height="230"
            style="overflow: visible; width: 100%; height: 100%;"
            viewBox="0 0 230 230"
            width="230"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Name expect to render without error 1`] = `
<TextContent>
  <LinkWithPermission
    style={
      Object {
        "marginRight": ".5rem",
      }
    }
    to="/reports/ID"
  >
    POLICY_NAME
  </LinkWithPermission>
  <PolicyPopover
    position="right"
    profile={
      Object {
        "id": "ID",
        "name": "NAME",
        "policy": Object {
          "id": "POLICY_ID",
          "name": "POLICY_NAME",
        },
        "policyType": "POLICY_TYPE",
      }
    }
  />
  <GreySmallText>
    POLICY_TYPE
  </GreySmallText>
</TextContent>
`;

exports[`OperatingSystem expect to render with SSG version 1`] = `
<DocumentFragment>
  RHEL 7
  <p
    class=""
    data-ouia-component-id="OUIA-Generated-Text-2"
    data-ouia-component-type="PF4/Text"
    data-ouia-safe="true"
    data-pf-content="true"
  >
    <small
      class=""
      data-ouia-component-id="OUIA-Generated-Text-3"
      data-ouia-component-type="PF4/Text"
      data-ouia-safe="true"
      data-pf-content="true"
    >
      SSG: 1.2.3
    </small>
  </p>
</DocumentFragment>
`;

exports[`OperatingSystem expect to render with unsupported warning 1`] = `
<DocumentFragment>
  RHEL 7
  <p
    class=""
    data-ouia-component-id="OUIA-Generated-Text-4"
    data-ouia-component-type="PF4/Text"
    data-ouia-safe="true"
    data-pf-content="true"
  >
    <small
      class=""
      data-ouia-component-id="OUIA-Generated-Text-5"
      data-ouia-component-type="PF4/Text"
      data-ouia-safe="true"
      data-pf-content="true"
    >
      <span
        style="display: inline-block;"
      >
        <span
          class="pf-u-mr-xs"
          style="cursor: pointer;"
        >
          <svg
            aria-hidden="true"
            fill="var(--pf-global--warning-color--100)"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 576 512"
            width="1em"
          >
            <path
              d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            />
          </svg>
        </span>
        SSG: 1.2.3
      </span>
    </small>
  </p>
</DocumentFragment>
`;

exports[`OperatingSystem expect to render without error 1`] = `
<DocumentFragment>
  RHEL 7
</DocumentFragment>
`;

exports[`PDFExportDownload expect to render without error 1`] = `
<BackgroundLink
  Component={[Function]}
  componentProps={
    Object {
      "className": "pf-u-mr-md",
      "ouiaId": "ReportsDownloadReportPDFLink",
      "variant": "plain",
    }
  }
  to="/reports/ID1/pdf"
>
  <DownloadIcon
    color="currentColor"
    noVerticalAlign={false}
    size="sm"
  />
</BackgroundLink>
`;
